MyDemoOrg/force-app/main/default/objects/BBCRM__LeadfieldsMap__c/BBCRM__LeadfieldsMap__c.object-meta.xml
<CustomObject>
    <label>LeadfieldsMap</label>
    <nameField>
        <label>LeadfieldsMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadfieldsMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>