MyDemoOrg/force-app/main/default/objects/BBCRM__LeadfieldsMap__c/fields/BBCRM__LeadArray__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__LeadArray__c</fullName>
    <label>LeadArray</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>