MyDemoOrg/force-app/main/default/objects/BBCRM__LeadfieldsMap__c/fields/BBCRM__LeadFMJson__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__LeadFMJson__c</fullName>
    <label>LeadFMJson</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>