MyDemoOrg/force-app/main/default/objects/BBCRM__LeadfieldsMap__c/fields/BBCRM__Singals_Fieldmaps__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Singals_Fieldmaps__c</fullName>
    <label>Singals Fieldmaps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>